1.19-6.0.27:
Upcoming:
- New 'stuff' feature. Using this you can define various random small objects that can be generated through cities (both inside and outside buildings)
- Fixed a bug where predefined cities and spheres wouldn't work at all

1.20-7.1.7:
- TqLxQuanZ fixed a problem where generation data wasn't properly saved which could cause generation errors if you exited the world and re-entered

1.19-6.0.26:
- Fixed a bug where switching worlds with different profiles would sometimes cause the old profile to be used

1.19-6.0.25:
- Optimization to make it so that buildings with tons of spawners, chests, and other tile entities will cause less lag on a server by spreading the load over multiple ticks. Use the 'todoQueueSize' server config to configure this. By default it is set to 20
- Fixed a bug where the POI todo wasn't persisted

1.19-6.0.24:
- TqLxQuanZ speed up world generation speed if the chunk is not a city

1.19-6.0.23:
- TqLxQuanZ fixed the scattered building can generate on air when there's a terrain correction in the current chunk
- TqLxQuanZ fixed the scattered building can generate on air when there's a terrain correction in the current chunk.

1.19-6.0.22:
- TqLxQuanZ fixed the bug that some POI's lingered after explosions (like brewing stands)
- TqLxQuanZ added park elevation and park border options

1.19-6.0.21:
- Very big optimizations to Lost City generation. On average generation of a city chunk will be 2 times faster.
- New 'stats' command to show average chunk generation time
- Finally fixed the POI warning that was spamming the log during chunk generation

1.19-6.0.20:
- TqLxQuanZ did various optimizations to Lost Cities worldgen and improved multibuilding handling

1.19-6.0.19:
- TqLxQuanZ fixed a problem where a building has an extreme rare chance to not generate

1.19-6.0.18:
- TqLxQuanZ changed hardAir to structure_void so that the commandblock can be used again

1.19-6.0.17: